Fix authentication flow and update emergency types

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20fill='none'%20viewBox='0%200%2024%2024'%20stroke-width='1.5'%20stroke='%23a855f7'%3e%3cpath%20stroke-linecap='round'%20stroke-linejoin='round'%20d='M8.25%208.25h7.5s-.375-1.405-1.405-2.405c-.832-.832-2.207-.832-3.039%200C10.47%206.68%209.375%208.25%209.375%208.25h-1.125ZM15%2010.5V9a6%206%200%200%200-6%200v1.5m6%200a6%206%200%200%201%206%206v2.25a.75.75%200%200%201-.75.75H3.75a.75.75%200%200%201-.75-.75V16.5a6%206%200%200%201%206-6Z'/%3e%3c/svg%3e" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23ef4444' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M12 22a5 5 0 1 0 0-10 5 5 0 0 0 0 10z'/%3E%3Cpath d='M12 17a5 5 0 0 0 0-10'/%3E%3Cpath d='M12 7v10'/%3E%3Cpath d='m7 7 3 3'/%3E%3Cpath d='m17 7-3 3'/%3E%3Cpath d='M7 17h10'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boda & Co - Emergency Response Platform</title>
+    <meta name="theme-color" content="#ef4444" />
+    <title>BodaCo Dispatch</title>
   </head>
   <body>
     <div id="root"></div>
